--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=200MB
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+
 #spring.servlet.multipart.enabled=true
 #spring.http.multipart.location= /upload
 
