--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,11 @@
     <name>efolder</name>
     <description>efolder</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>17</java.version><spring-security.version>5.3.4.RELEASE</spring-security.version>
+        <spring.version>5.2.8.RELEASE</spring.version>
+
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -107,6 +110,7 @@
             <artifactId>springdoc-openapi-security</artifactId>
             <version>1.6.12</version>
         </dependency>
+
 
     </dependencies>
     <pluginRepositories>
