--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,19 @@
             <artifactId>springdoc-openapi-security</artifactId>
             <version>1.6.12</version>
         </dependency>
+        <!-- Add the Spring Data JPA starter dependency -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
+
 
 
     </dependencies>
